# kolokwium

./: CMakeLists.txt  Makefile  myProgram
zad3/: CMakeLists.txt
